# autonomous-line-robot-dijkstra

./: README.md
line_robot_v3/: run.sh
line_robot_v3/line_robot/: package.xml  setup.cfg  setup.py
line_robot_v3/line_robot/config/: bridge.yaml
line_robot_v3/line_robot/description/: robot.urdf
line_robot_v3/line_robot/launch/: simulation.launch.py
line_robot_v3/line_robot/line_robot/: follower.py  path_planner.py
line_robot_v3/line_robot/worlds/: track.sdf
