<?xml version="1.0"?>
<package format="3">
  <name>line_robot</name>
  <version>1.0.0</version>
  <description>Line follower ROS2 Jazzy Gazebo Harmonic</description>
  <maintainer email="u@u.com">u</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
